Fixed navbar not collapsing by including jquery, popper, and bootstrap directly in the navbar template. Working on setting active status for selected page.

--- a/blog/static/css/navbar/navbar.css
+++ b/blog/static/css/navbar/navbar.css
@@ -14,7 +14,7 @@
 .navbar-collapse {
     justify-content: flex-end;
 }
-
-.nav-item:active {
-    color: var(--blue-green) !important;
+.navbar.active {
+    color: #32CD9E;
+    font-weight: bold;
 }
